# OGLTemplate

./: .gitignore  CMakeLists.txt  README.md
configure/: root_directory.h.in
includes/: animation.h  animator.h  bone.h  model_animation.h  shader.h
src/: main.cpp
